--- a/AndroidJava/app/src/main/res/layout/fragment_meal_details.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_meal_details.xml
@@ -30,7 +30,7 @@
              />
         </androidx.cardview.widget.CardView>
 
-        <!-- Second CardView: Meal Details -->
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="110dp"
@@ -86,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:text=".area2"
+                    android:text="@string/area2"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
