--- a/AndroidJava/app/src/main/res/layout/fragment_login_page.xml
+++ b/AndroidJava/app/src/main/res/layout/fragment_login_page.xml
@@ -67,7 +67,8 @@
                     android:id="@+id/emailTE"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/SoftPink" />
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -86,7 +87,8 @@
                     android:id="@+id/passET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorLink="#3F51B5" />
+                    android:background="@color/white"
+                  />
 
             </com.google.android.material.textfield.TextInputLayout>
 
