--- a/AndroidJava/app/src/main/res/layout/ingredient_item.xml
+++ b/AndroidJava/app/src/main/res/layout/ingredient_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-    <!-- CardView: Holds Image & Text -->
+
     <androidx.cardview.widget.CardView
         android:layout_width="120dp"
         android:layout_height="wrap_content"
@@ -18,7 +18,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <!-- Inner LinearLayout for Alignment -->
         <LinearLayout
             android:layout_width="130dp"
             android:layout_height="150dp"
@@ -27,17 +26,17 @@
             android:orientation="vertical"
             android:padding="12dp">
 
-            <!-- Ingredient Image -->
+
             <ImageView
                 android:id="@+id/ingredientImg"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
-                android:contentDescription="Ingredient Image"
+                android:contentDescription="@string/ingredient_image"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/food" />
 
-            <!-- Ingredient Title -->
+
             <TextView
                 android:id="@+id/stepTxt"
                 android:layout_width="wrap_content"
@@ -45,7 +44,7 @@
                 android:layout_marginTop="6dp"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
-                android:text="Ingredient Title"
+                android:text="@string/ingredient_title"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="normal" />
