--- a/AndroidJava/app/src/main/res/values/styles.xml
+++ b/AndroidJava/app/src/main/res/values/styles.xml
@@ -16,6 +16,10 @@
         <item name="colorAccent">@color/red</item>
 
     </style>
+    <style name="CustomChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="chipBackgroundColor">@color/chip_background_color</item>
+        <item name="android:textColor">@color/chip_text_color</item>
+    </style>
 
 
 
